# basic_coro

./: .gitignore  CMakeLists.txt  README.md  library.cmake
docs/: README.md  core.md  extras.md  trace.md
src/basic_coro/: aggregator.h  alert_flag.hpp  allocator.hpp  async_generator.hpp  await_proxy.hpp  awaitable.hpp  awaitable_transform.hpp  awaiting_callback.hpp  basic_coro.hpp  basic_lockable.hpp  cancel_signal.hpp  co_switch.hpp  concepts.hpp  coro_frame.hpp  coroutine.hpp  defer.hpp  defer_impl.hpp  dispatch_thread.hpp  distributor.hpp  exceptions.hpp  flat_stack_allocator.hpp  mutex.hpp  pending.hpp  pmr_allocator.hpp  prepared_coro.hpp  queue.hpp  reactive.hpp  result_proxy.hpp  safe_invoke.hpp  scheduler.hpp  sync_await.hpp  trace.hpp  universal_storage.hpp  when_all.hpp  when_each.hpp
src/tests/: CMakeLists.txt  all_compile.cpp  anyof_allof.cpp  coro_and_awaiter.cpp  coro_dispatcher.cpp  defer.cpp  distributor.cpp  flat_stack_alloc.cpp  generator.cpp  mutex.cpp  queue.cpp  reactive.cpp  scheduler.cpp  scheduler_cycle.cpp  trace.cpp
tests/: CMakeLists.txt  all_compile.cpp  awaitable_transform.cpp  coro_and_awaiter.cpp  coro_dispatcher.cpp  flat_stack_alloc.cpp  generator.cpp  queue.cpp  scheduler_cycle.cpp
